syntax = "proto2";
package msg;
import "core.types.proto";

// AuthRegister
// @Function
// @Return: AuthAuthorization
message AuthRegister {
    required string Phone = 1;
    required string FirstName = 2;
    required string LastName = 3;
    required string PhoneCode = 4;
    required string PhoneCodeHash = 5;
}

// AuthLogin
// @Function
// @Return: AuthAuthorization
message AuthLogin {
    required string Phone = 1;
    required string PhoneCodeHash = 2;
    required string PhoneCode = 3;
}

// AuthLogout
// @Function
// @Return: Bool
message AuthLogout {
    repeated int64 AuthIDs = 1 [jstype = JS_STRING];
}

// AuthCheckPhone
// @Function
// @Return: AuthCheckedPhone
message AuthCheckPhone {
    required string Phone = 1;
}

// AuthSendCode
// @Function
// @Return: AuthSentCode
message AuthSendCode {
    required string Phone = 1;
}

// AuthResendCode
// @Function
// @Return: Bool
message AuthResendCode {
    required string Phone = 1;
    required string PhoneCodeHash = 2;
}

// AuthRecall
// @Function
// @Return: AuthRecalled
message AuthRecall {
    required int64 ClientID = 1 [jstype = JS_STRING];
}

// AuthDestroyKey
// @Function
// @Return: Bool
message AuthDestroyKey {
}

// AuthRecalled
message AuthRecalled {
    required int64 ClientID = 1 [jstype = JS_STRING];
    required int64 Timestamp = 2;
}

// AuthAuthorization
message AuthAuthorization {
    required fixed64 Expired = 1;
    required User User = 2;
}

// AuthCheckedPhone
message AuthCheckedPhone {
    required bool Invited = 1;
    required bool Registered = 2;
}

// AuthSentCode
message AuthSentCode {
    required string Phone = 1;
    required string PhoneCodeHash = 2;
}
