syntax = "proto2";
package msg;

// InitDB
message InitDB {
    required string KeySpace = 1;
    required string Host = 2;
    required string Username = 3;
    required string Password = 4;
}

// InitConnect
// @Function
// @Return: InitReponse
message InitConnect {
    required fixed64 ClientNonce = 1;
}

// InitResponse
message InitResponse {
    required fixed64 ClientNonce = 1;
    required fixed64 ServerNonce = 2;
    required fixed64 RSAPubKeyFingerPrint = 3;
    required fixed64 DHGroupFingerPrint = 4;
    required fixed64 PQ = 5;
    required int64 ServerTimestamp = 6;
}

// InitCompleteAuth
// @Function
// @Return: InitAuthCompleted
message InitCompleteAuth {
    required fixed64 ClientNonce = 1;
    required fixed64 ServerNonce = 2;
    //    fixed32 ClientPubKeyE = 3;
    //    string ClientPubKeyN = 4;
    required bytes ClientDHPubKey = 5;
    required fixed64 P = 6;
    required fixed64 Q = 7;
    required bytes EncryptedPayload = 8;
}

// InitCompleteAuthInternal
message InitCompleteAuthInternal {
    required bytes SecretNonce = 1;
}

// InitAuthCompleted
message InitAuthCompleted {
    required fixed64 ClientNonce = 1;
    required fixed64 ServerNonce = 2;
    enum Statuses {
        OK = 0;
        FAIL = 1;
        RETRY = 2;
    }
    required Statuses Status = 3;
    required fixed64 SecretHash = 4;
    required bytes ServerDHPubKey = 5;
}
